unpackaged/main/default/objects/Workforce_Master__c/Workforce_Master__c.object-meta.xml
<CustomObject>
    <label>Workforce Master</label>
    <nameField>
        <displayFormat>WFM-{0000}</displayFormat>
        <label>Workforce Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workforce Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>