unpackaged/main/default/objects/Workforce_Master__c/fields/Additional_Transport_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Additional_Transport_Allowance__c</fullName>
    <label>Additional Transport Allowance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>