unpackaged/main/default/objects/Workforce_Master__c/fields/Additional_work_Permit_Expats__c.field-meta.xml
<CustomField>
    <fullName>Additional_work_Permit_Expats__c</fullName>
    <label>Additional work Permit(Expats)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>