unpackaged/main/default/objects/Workforce_Master__c/fields/Cost_of_Living_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Living_Allowance__c</fullName>
    <label>Cost of Living Allowance</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>