unpackaged/main/default/objects/Workforce_Master__c/fields/ET_Workforce_Category__c.field-meta.xml
<CustomField>
    <fullName>ET_Workforce_Category__c</fullName>
    <formula>text( Emirate__c ) +&#39; &#39;+text( Service_Type__c ) +&#39; &#39;+ text( Workforce_Type__c )</formula>
    <label>Workforce Category</label>
    <type>Text</type>
</CustomField>