unpackaged/main/default/objects/Workforce_Master__c/fields/Housing_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Housing_Allowance__c</fullName>
    <label>Housing Allowance(%)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>