unpackaged/main/default/objects/Workforce_Master__c/fields/Number_of_End_of_Service_months__c.field-meta.xml
<CustomField>
    <fullName>Number_of_End_of_Service_months__c</fullName>
    <label>Number of End of Service months</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 month full Gross salary</fullName>
            </value>
            <value>
                <fullName>1 month Basic salary</fullName>
            </value>
            <value>
                <fullName>2 months full salary</fullName>
            </value>
            <value>
                <fullName>2 months basic salary</fullName>
            </value>
            <value>
                <fullName>3 months full salary</fullName>
            </value>
            <value>
                <fullName>3 months basic salary</fullName>
            </value>
            <value>
                <fullName>4 months full salary</fullName>
            </value>
            <value>
                <fullName>4 months basic salary</fullName>
            </value>
            <value>
                <fullName>5 months full salary</fullName>
            </value>
            <value>
                <fullName>5 months basic salary</fullName>
            </value>
            <value>
                <fullName>6 months full salary</fullName>
            </value>
            <value>
                <fullName>6 months basic salary</fullName>
            </value>
            <value>
                <fullName>7 months full salary</fullName>
            </value>
            <value>
                <fullName>7 months basic salary</fullName>
            </value>
            <value>
                <fullName>8 months full salary</fullName>
            </value>
            <value>
                <fullName>8 months basic salary</fullName>
            </value>
            <value>
                <fullName>9 months full salary</fullName>
            </value>
            <value>
                <fullName>9 months basic salary</fullName>
            </value>
            <value>
                <fullName>10 months full salary</fullName>
            </value>
            <value>
                <fullName>10 months basic salary</fullName>
            </value>
            <value>
                <fullName>11 months full salary</fullName>
            </value>
            <value>
                <fullName>11 months basic salary</fullName>
            </value>
            <value>
                <fullName>12 months full salary</fullName>
            </value>
            <value>
                <fullName>12 months basic salary</fullName>
            </value>
            <value>
                <fullName>1 month full salary</fullName>
                <isActive>false</isActive>
                <label>1 month full salary</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>