unpackaged/main/default/objects/Workforce_Master__c/fields/Other_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Other_Allowance__c</fullName>
    <label>Other Allowance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>