unpackaged/main/default/objects/Workforce_Master__c/fields/Salary_Grade__c.field-meta.xml
<CustomField>
    <fullName>Salary_Grade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salary Grade</label>
    <referenceTo>Workforce_Grade__c</referenceTo>
    <relationshipLabel>Workforce Masters</relationshipLabel>
    <relationshipName>Workforce_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>