unpackaged/main/default/objects/Workforce_Master__c/fields/Transport_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Transport_Allowance__c</fullName>
    <label>Transport Allowance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>