unpackaged/main/default/objects/Workforce_Master__c/fields/Workforce_Category__c.field-meta.xml
<CustomField>
    <fullName>Workforce_Category__c</fullName>
    <description>capture workforce category</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Workforce Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>