unpackaged/main/default/objects/Workforce_Master__c/fields/Workforce_Type__c.field-meta.xml
<CustomField>
    <fullName>Workforce_Type__c</fullName>
    <label>Workforce Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Workforce_Type</valueSetName>
    </valueSet>
</CustomField>