unpackaged/main/default/objects/Workforce_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Emirate__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Workforce_Type__c</columns>
    <columns>ET_Workforce_Category__c</columns>
    <columns>Salary_Grade__c</columns>
    <columns>Number_of_Annual_Leave_months__c</columns>
    <columns>Number_of_End_of_Service_months__c</columns>
    <columns>Clothes_Allowance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>