unpackaged/main/default/objects/Workforce_Master__c/listViews/Driver.listView-meta.xml
<ListView>
    <fullName>Driver</fullName>
    <columns>NAME</columns>
    <columns>Workforce_Category__c</columns>
    <columns>Workforce_Type__c</columns>
    <columns>Clothes_Allowance__c</columns>
    <columns>Number_of_Annual_Leave_months__c</columns>
    <columns>Number_of_End_of_Service_months__c</columns>
    <columns>Salary_Grade__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Workforce_Type__c</field>
        <operation>equals</operation>
        <value>Driver</value>
    </filters>
    <label>Driver</label>
</ListView>